objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AttendanceStatus__c</fullName>
        <inlineHelpText>This is only on Contact for expediency</inlineHelpText>
        <label>Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Asleep</fullName>
                </value>
                <value>
                    <fullName>Excused Absence</fullName>
                </value>
                <value>
                    <fullName>Unexcused Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalSalesforceId__c</fullName>
        <externalId>true</externalId>
        <label>External Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>